Page1 almost done

--- a/rmarkdown_practice.Rmd
+++ b/rmarkdown_practice.Rmd
@@ -28,5 +28,32 @@ urlcolor: blue
 <!-- Write your Markdown below this line -->
 
 # How the Course Works
+The weekly interactive tutorials must be completed by the start of each week. Then each weekly assignment will be due at the end of the week.
 
+# Course Goals
+By the end of the course, students will be able to:
 
+* Use [GitHub](https://github.com) for creating a reproducible research document.
+  * My GitHub username is: *itsdom05*.
+
+* Obtain, clean, transform, and visualize a dataset using the R programming language.
+
+* Interpret and predict dataset trends using statistical inference and models. 
+
+* Criticallt examine and interpret statistical claims reported in mass media.
+
+# Including Code
+## Running R Code in a code chunk
+```{r}
+x <- 2+2
+x + 3
+```
+The output of the first line of code is not printed out because it is assigned to a variable instead.
+
+The second line of output is printed out instead, but this means that the calculated value has not been saved for future use.
+
+## Displaying Graphs
+
+```{r}
+ggplot2::qplot(data = iris, x = Sepal.Length, y = Sepal.Width)
+```
